--- a/signin.css
+++ b/signin.css
@@ -42,3 +42,8 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.custom-button{
+  background-color: #28a745;
+  border-color: #28a745;
+}
