--- a/signin.css
+++ b/signin.css
@@ -44,6 +44,6 @@ body {
 }
 
 .custom-button{
-  background-color: #28a745;
-  border-color: #28a745;
+  background-color: green;
+  border-color: green;
 }
